--- a/html/index.html
+++ b/html/index.html
@@ -12,7 +12,7 @@
         <h1>Header</h1>
     </header>
     <main class="main-content">
-        <h3> Något</h3>
+        <h3> Det här är ett mergetest del ett av 2</h3>
         <p>paragraf</p>
     </main>
     <footer>Footer
